# sigo

./: .env  .env.example  .gitignore
.docker/: docker-compose.yaml
.github/workflows/: qlty.yml
docs/: POWERBI_SETUP.md  api.yaml
reports/: lcov.info
sigo-api/: .coverage  .coveragerc  README.md  database.py  main.py  pyproject.toml
sigo-api/controller/: auth_controller.py  dashboard_controller.py  group_controller.py  user_controller.py
sigo-api/migrations/: add_background_image_migration.py  add_background_image_to_groups.sql  create_dashboards_table.py
sigo-api/models/: dashboard.py  group.py  user.py
sigo-api/schemas/: dashboard_schema.py  group_schema.py  user_schema.py
sigo-api/services/: powerbi_service.py
sigo-api/tests/: conftest.py  test_auth.py  test_dashboard.py  test_group.py  test_main.py  test_powerbi_service.py  test_user.py
sigo-api/views/: auth_view.py  dashboard_view.py  group_view.py  user_view.py
terraform/: main.tf
